# gemini-code-assist-mcp

./: .editorconfig  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  COLLAB.md  GEMINI.md  Makefile  README.md  package-lock.json  pyproject.toml  run_tests.py
.github/workflows/: ci.yml
src/: main.py
src/cli/: __init__.py  main.py
src/cli/commands/: bug.py  explain.py  feature.py  review.py  status.py
src/cli/utils/: __init__.py  file_utils.py  output.py
src/core/: config.py  gemini_client.py
src/core/tests/: test_config.py  test_gemini_client.py
src/server/: gemini_server.py
src/server/tests/: test_gemini_server.py
tests/smoke/: test_cli.py  test_code.py  test_installation.py
