[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project]
name = "gemini-mcp-server"
version = "0.1.3"
description = "MCP server for Google Gemini CLI integration with Claude Code"
authors = [
    {name = "Gemini Code Assist MCP Contributors"}
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.11"
keywords = ["mcp", "gemini", "claude", "ai", "code-review", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]

dependencies = [
    "mcp >= 1.0.0",
    "pydantic >= 2.0.0",
    "typing-extensions",
    "click >= 8.0.0",
    "rich >= 12.0.0",
    "toml >= 0.10.0",
    "colorama >= 0.4.0",
]

[project.urls]
Homepage = "https://github.com/YOUR-USERNAME/gemini-code-assist-mcp"
Repository = "https://github.com/YOUR-USERNAME/gemini-code-assist-mcp"
Documentation = "https://github.com/YOUR-USERNAME/gemini-code-assist-mcp#readme"
Issues = "https://github.com/YOUR-USERNAME/gemini-code-assist-mcp/issues"

[project.optional-dependencies]
dev = [
    "pytest >= 7.0.0",
    "pytest-asyncio >= 0.21.0",
    "pytest-mock >= 3.10.0",
    "mypy >= 1.0.0",
    "ruff >= 0.1.0",
    "coverage >= 7.0.0",
]

[project.scripts]
gemini-mcp-server = "src.main:main"
gemini-mcp-cli = "src.cli.main:cli"

[dependency-groups]
dev = [
    "coverage>=7.9.2",
    "mypy>=1.16.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "pytest-mock>=3.14.1",
    "ruff>=0.12.2",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["src", "tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src"]
omit = ["src/*/tests/*", "src/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
